--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
-  - {name: 🇭🇰 香港-1.36MB/s(Youtube:不良林), server: 43.129.158.202, port: 38009, type: vmess, uuid: 7fe50249-0f9c-42bb-9815-842bec303691, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-295.7KB/s(Youtube:不良林), server: 8.219.10.137, port: 11070, type: vmess, uuid: 0431f60c-99b1-44f9-c656-f88990433c56, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.99MB/s(Youtube:不良林), server: vr.eseabean.xyz, port: 12860, type: vmess, uuid: f0c28644-eba5-4de7-e9ed-abcf58a657f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /media, ws-headers: {Host: vr.eseabean.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
-  - {name: 🇨🇳 中国-392.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-491.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-289.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-260.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-260.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-453.6KB/s(Youtube:不良林), server: 216.24.248.104, port: 29862, type: vmess, uuid: 281f345f-da96-485b-9aa3-4bc530f2ffa2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fdsfa, ws-headers: {Host: 216.24.248.104}}
+  - {name: 🇺🇸 美国-706.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-392.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-221.3KB/s(Youtube:不良林), server: test.johnnyz.tk, port: 21997, type: vmess, uuid: d27f450c-e9e4-4427-90bf-42020401c1ad, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /johnnyz996, ws-headers: {Host: test.johnnyz.tk}}
+  - {name: 🇫🇷 法国-494.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-357.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-229.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-297.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-436.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-315.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-295.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
