--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-260.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-453.6KB/s(Youtube:不良林), server: 216.24.248.104, port: 29862, type: vmess, uuid: 281f345f-da96-485b-9aa3-4bc530f2ffa2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fdsfa, ws-headers: {Host: 216.24.248.104}}
-  - {name: 🇺🇸 美国-706.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-392.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-221.3KB/s(Youtube:不良林), server: test.johnnyz.tk, port: 21997, type: vmess, uuid: d27f450c-e9e4-4427-90bf-42020401c1ad, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /johnnyz996, ws-headers: {Host: test.johnnyz.tk}}
-  - {name: 🇫🇷 法国-494.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-357.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.79MB/s(Youtube:不良林), server: 20.89.230.23, port: 48090, type: vmess, uuid: 6baaeb1e-5dce-49b7-d6f4-b30a9ea3b758, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-229.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-297.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-436.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇫🇷 法国-238.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-352.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-469.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-337.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-389.2KB/s(Youtube:不良林), server: xmrh001.xmrth-node.xyz, port: 15880, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh001.xmrth-node.xyz}}
+  - {name: 🇬🇧 英国-370.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-367.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-337.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-370.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-367.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-337.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-370.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-367.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-337.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-370.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-367.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-389.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-337.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-370.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-367.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-337.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-370.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-367.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-337.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-370.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-367.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-221.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-494.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-357.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇫🇷 法国-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-337.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-389.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-370.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-367.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
